fixed remaining spacing issues

--- a/proofs/map/map_style.css
+++ b/proofs/map/map_style.css
@@ -46,7 +46,6 @@ div{
             width: 697px;
             height: 498px;
             margin: auto;
-            margin-top: 50px;
             /*important to keep hero in place*/
             position: relative;
             /*text-align: center;*/
